[package]
name = "bevy_bad_sdr_bloom"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "render",
    "bevy_asset"
] }

[dev-dependencies]
bevy = "0.9"